# tgbot

./: .gitignore  CMakeLists.txt  README.md  build.sh
environment/database/: test.db  users.db
environment/json/: languages.json
source/: main.cxx
source/lib/bot/: bot.cxx  bot.h
source/lib/messages/: messages.cxx  messages.h
source/lib/tools/: tools.cxx  tools.h
